# cookiecutter-project-template

./: CHANGELOG.md  README.md  cookiecutter.json
.github/workflows/: auto-release.yml
hooks/: post_gen_project.py
scripts/: compute_next_tag.sh  generate_changelog.sh  release.sh
{{cookiecutter.project_id}}_{{cookiecutter.project_slug}}/: README.md  project_config.yaml  pyproject.toml  requirements.txt  run_pipeline.py
{{cookiecutter.project_id}}_{{cookiecutter.project_slug}}/notebooks/: 0_setup.ipynb  1_data_prep.ipynb  2_analysis.ipynb  3_results.ipynb  4_report.ipynb
{{cookiecutter.project_id}}_{{cookiecutter.project_slug}}/prompts/: prompts.yaml
{{cookiecutter.project_id}}_{{cookiecutter.project_slug}}/src/: utils.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/experiments/configs/: example_config.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  experiments.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/: app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/core/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/infer/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  experiments.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py  test_cli.py  test_core.py  test_models.py  test_train.py
