[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "{{ cookiecutter.author_name }}"}
]
license = {text = "MIT"}

dependencies = [
    # Add your project dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
{%- if cookiecutter.include_ai_research == "yes" %}
research = [
    "jupyter>=1.0",
    "notebook>=7.0",
    "pandas>=2.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scikit-learn>=1.0",
]
{%- endif %}
{%- if cookiecutter.include_api == "yes" %}
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]
{%- endif %}

[tool.setuptools]
packages = ["{{cookiecutter.package_name}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov={{cookiecutter.package_name}} --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
